--- a/IluminaRJApi/appsettings.json
+++ b/IluminaRJApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IluminaRjApiConnection": "server=localhost;database=iluminarj;user=root;password=#Pass0802"
+  }
 }
